TEST_PROGRAMS/INVALID/teng_long/bad_5.min
# id starts with digits

var 0_id : int;

